--- a/DismToolGui.csproj
+++ b/DismToolGui.csproj
@@ -13,7 +13,7 @@
 	<ApplicationIcon>DISM Tool.ico</ApplicationIcon>
 	<PlatformTarget>x64</PlatformTarget>
 	<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	<Title>DISM Tool</Title>
+	<Title>DISM Tool GUI</Title>
 	<Version>1.5.8</Version>
 	<Product>DISM Tool</Product>
 	<Description>This GUI tool simplifies running common DISM commands. It allows you to execute system maintenance actions through a clean, guided interface with dynamic inputs and color-coded outputs.</Description>
